Added deep link support (#277)
* Added deep link support

  1. AndroidManifest.xml

  Added a deep link intent filter to MainActivity to handle https://5calls.org/issue/{issueId} URLs:
  - Added <intent-filter> with android:autoVerify="true" for Android App Links
  - Configured to handle HTTPS scheme, 5calls.org host, and /issue/ path prefix

  2. MainActivity.java

  Added deep link handling logic:
  - New field: mPendingDeepLinkIssueId to store the issue ID from the deep link
  - handleDeepLink(): Parses incoming intent URIs and extracts the issue ID from URLs like https://5calls.org/issue/1051
  - onNewIntent(): Handles deep links when the app is already running (singleTop launch mode)
  - handlePendingDeepLink(): Searches for the issue in the loaded issues list and either opens it or shows an error
  - Modified onCreate() to call handleDeepLink() on initial launch
  - Modified onIssuesReceived() callback to call handlePendingDeepLink() after issues are loaded

  3. IssuesAdapter.java

  - Added getAllIssues() getter method to allow MainActivity to search through all loaded issues

  4. strings.xml

  Added two new error messages:
  - issue_not_found: "This issue isn't relevant anymore"
  - issue_inactive: "This issue is no longer active"

* Switched deep link handling

to handle the permalink slug instead of the issueId

also responded to dektar's comments

* Fixed calls section when deep linking

Issues Fixed:

When users opened the app via a deep link (e.g., from a notification), the IssueActivity would show "no calls for this issue" because contacts weren't loaded yet.

Race condition: Issues and contacts load in parallel, but we were launching IssueActivity as soon as issues loaded, without waiting for contacts

Path matching issue: Substring matching could cause false matches between similar slugs (national vs state-specific issues)

Path format mismatch: Deep link paths didn't match API permalink format (missing slashes)

Contacts not populated: Issue obje